<resources>
    <string name="app_name">Political Preparedness</string>
    <!--Content Description-->
    <string name="desc_elections_logo">Elections Logo</string>
    <string name="desc_official_profile_picture">Official Profile Picture</string>
    <string name="desc_official_website">Official Website Link</string>
    <string name="desc_official_facebook">Official Facebook Link</string>
    <string name="desc_official_twitter">Official Twitter Link</string>
    <!--Titles-->
    <string name="title_upcoming_elections">Upcoming Elections</string>
    <string name="title_elections_information">Election Information</string>
    <string name="title_voting_locations">Voting Locations</string>
    <string name="title_ballot_locations">Ballot Locations</string>
    <string name="title_saved_elections">Saved Elections</string>
    <string name="title_my_representatives">My Representatives</string>
    <string name="title_representatives_search">Representatives Search</string>
    <!--buttons_texts-->
    <string name="btn_find_my_representatives_text">Find My Representatives</string>
    <string name="btn_follow_text">Follow Election</string>
    <string name="btn_unfollow_text">Unfollow Election</string>
    <string name="btn_use_my_location_text">Use My Current Location</string>
    <!--hints-->
    <string name="hint_address_line_1">Address Line 1</string>
    <string name="hint_address_line_2">Address Line 2</string>
    <string name="hint_city">City</string>
    <string name="hint_state">State</string>
    <string name="hint_zip">Zip Code</string>
    <!--location alert dialog-->
    <string name="message_open_gps">Please enable your high accuracy mode GPS</string>
    <string name="label_yes">Yes</string>
    <string name="label_no">No</string>
    <!-- error messages-->
    <string name="empty_elections">There isn\'t any election</string>
    <string name="empty_representatives">There isn\'t any representative</string>
    <string name="error_no_internet_connection">Please check your internet connection</string>
    <string name="error_location_permission_denied">Location Permission is required</string>
    <string name="error_server">Server Error</string>
</resources>