<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="representative"
            type="com.soha.politicalpredness.models.Representative" />

        <variable
            name="representativeVM"
            type="com.soha.politicalpredness.ui.representatives.RepresentativeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_padding"
        android:layout_marginTop="@dimen/medium_padding"
        android:layout_marginEnd="@dimen/small_padding"
        android:background="@color/colorWhite">

        <ImageView
            android:id="@+id/ivRepresentativePhoto"
            android:layout_width="@dimen/civ_dimen"
            android:layout_height="@dimen/civ_dimen"
            android:layout_marginStart="@dimen/small_padding"
            android:contentDescription="@string/desc_official_profile_picture"
            android:src="@drawable/ic_profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvOfficeName"
            style="@style/TextAppearance.AppCompat.ListTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium_padding"
            android:lines="2"
            android:text="@{representative.office.name}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivRepresentativePhoto"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvOfficialName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/medium_padding"
            android:ellipsize="end"
            android:lines="1"
            android:text="@{representative.official.name}"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@id/ivWeb"
            app:layout_constraintStart_toStartOf="@id/tvOfficeName"
            app:layout_constraintTop_toBottomOf="@id/tvOfficeName" />

        <TextView
            android:id="@+id/tv_official_party"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_padding"
            android:text="@{representative.official.party}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tvOfficialName"
            app:layout_constraintStart_toStartOf="@id/tvOfficeName"
            app:layout_constraintTop_toBottomOf="@id/tvOfficialName" />

        <ImageView
            android:id="@+id/ivWeb"
            android:layout_width="@dimen/channel_dimen"
            android:layout_height="@dimen/channel_dimen"
            android:layout_marginEnd="@dimen/medium_padding"
            android:layout_marginBottom="@dimen/small_padding"
            android:contentDescription="@string/desc_official_website"
            android:onClick="@{() -> representativeVM.onWebClick()}"
            android:src="@drawable/ic_www"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ivFacebook" />

        <ImageView
            android:id="@+id/ivFacebook"
            android:layout_width="@dimen/channel_dimen"
            android:layout_height="@dimen/channel_dimen"
            android:layout_marginEnd="@dimen/medium_padding"
            android:layout_marginBottom="@dimen/small_padding"
            android:contentDescription="@string/desc_official_facebook"
            android:onClick="@{() -> representativeVM.onFacebookClick()}"
            android:src="@drawable/ic_facebook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ivTwitter" />

        <ImageView
            android:id="@+id/ivTwitter"
            android:layout_width="@dimen/channel_dimen"
            android:layout_height="@dimen/channel_dimen"
            android:layout_marginEnd="@dimen/small_padding"
            android:layout_marginBottom="@dimen/small_padding"
            android:contentDescription="@string/desc_official_twitter"
            android:onClick="@{() -> representativeVM.onTwitterClick()}"
            android:src="@drawable/ic_twitter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>